{
    "name": "PlayerKeyMapping",
    "maps": [
        {
            "name": "OnGround",
            "id": "da357e44-0313-42f5-a6c6-5f57c1c3310c",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "d10b84df-c3e6-41da-981c-77b01ebbd102",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "9dd80c04-94e7-433a-9656-2f5c1d8339ca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "77489368-93cc-436f-8561-7a24ef951a0c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "f187b8c8-be6a-4d7c-8005-f74b191c5e46",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "666ab8b1-6b88-4cb5-b003-dc656b42f630",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "6c6f0e37-3683-4e37-a17e-ce352d9ff21e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LMouse",
                    "type": "Button",
                    "id": "ddf74d8b-3239-4436-bad0-1713473d27d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RMouse",
                    "type": "Button",
                    "id": "7fb71016-e346-45c2-bb1d-a914715c5336",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "b35256c7-6f54-4a73-8205-f9ff12cf620c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DashRight",
                    "type": "PassThrough",
                    "id": "c83b1ff2-dda1-46a8-ac6a-eba271d5f7bd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DashLeft",
                    "type": "PassThrough",
                    "id": "20b47940-16ff-4007-b949-91495db2110f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "054daa73-aaad-4872-be39-480c28ff2f29",
                    "path": "<Keyboard>/space",
                    "interactions": "Hold(duration=0.05)",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59508c4a-bcea-4efa-bfa0-b356f67289a5",
                    "path": "<Keyboard>/d",
                    "interactions": "Hold(duration=0.02)",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d2163e01-95df-40a4-95b9-2aab0438af7e",
                    "path": "<Keyboard>/a",
                    "interactions": "Hold(duration=0.02)",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1695889-2910-4cd2-baf3-3f1ce1a5b88a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d6b37d0-794c-4553-ba5f-7f514b39b25f",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da0d85e4-a91e-4714-a6d2-71b1b07574f2",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "137d5c87-022b-47ca-9e8b-192db1ec2e1b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74ede73c-485e-4dc9-aa6a-de19a6ebbd19",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aad04a25-6897-4e88-87e8-2fba752a7859",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9300c89e-1f42-47bb-9a9f-2a503ecd0ead",
                    "path": "<Keyboard>/d",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "DashRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30f60459-4022-4652-ba36-c0b58567343b",
                    "path": "<Keyboard>/a",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "DashLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}